k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otpbud
  namespace: otp-bud
spec:
  ingressClassName: nginx
  rules:
    - host: otpbud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otpbud-backend
                port:
                  number: 80
